@@ -366,6 +366,7 @@ a.error:hover {
 
 .noLink {
     font-size: 10px;
+    text-align:center;
 }
 
 /* Used on Adminpage */
