@@ -371,4 +371,21 @@ function showResults($id) {
 	return $buf;
 }
 
+/*
+** This is a hack around the voting code.
+*/
+
+function buildVotingInputFields() {
+    global $gallery;
+
+    $nv_pairs=$gallery->album->getVoteNVPairs();
+    $votingInputFieldArray = array();
+    for ($i=0; $i<$gallery->album->getPollScale() ; $i++) {
+	 $votingInputFieldArray[] = "<input type=\"text\" name=\"nv_pairs[$i][name]\" value=\"". $nv_pairs[$i]["name"] ."\">";
+	 $votingInputFieldArray[] = "<input type=\"text\" name=\"nv_pairs[$i][value]\" value=\"". $nv_pairs[$i]["value"] ."\">";
+    }
+
+    return $votingInputFieldArray;
+}
+
 ?>
