@@ -91,7 +91,7 @@ $fullSizeIconText = getIconText('window_fullscreen.gif', _("full size"));
 $forwardIconText = getIconText('1rightarrow.gif', _("forward direction"));
 $backwardIconText = getIconText('1leftarrow.gif', _("reverse direction"));
 $delayIconText = getIcontext('history.gif', _("Delay"));
-$loopIconText =  getIcontext('reload.gif', _("Loop"));
+$loopIconText =  getIcontext('reload.gif', _("Loop:"));
 
 // in offline mode, only high is available, because it's the only
 // one where the photos can be spidered...
