@@ -282,13 +282,6 @@ $adminOptions = array(
 						 'action' => 'url',
 						 'value' => doCommand('new-album', array('parentName' => $gallery->session->albumName),
 									'view_album.php')),
-		      'custom_fields'   => array('name' => _('custom fields'),
-						 'requirements' => array('canChangeText',
-									 'notOffline'),
-						 'action' => 'popup',
-						 'value' => makeGalleryUrl('extra_fields.php',
-								array('set_albumName' => $gallery->session->albumName,
-									'type' => 'popup'))),
 		      'edit_captions'   => array('name' => _('edit captions'),
 						 'requirements' => array('canChangeText',
 									 'notOffline'),
@@ -328,12 +321,6 @@ $adminOptions = array(
 						 'requirements' => array('isAdminOrAlbumOwner'),
 						 'action' => 'popup',
 						 'value' => makeGalleryUrl('album_permissions.php',
-								array('set_albumName' => $gallery->session->albumName,
-									'type' => 'popup'))),
-		      'poll_properties' => array('name' => _('poll properties'),
-						 'requirements' => array('isAdminOrAlbumOwner'),
-						 'action' => 'popup',
-						 'value' => makeGalleryUrl('poll_properties.php',
 								array('set_albumName' => $gallery->session->albumName,
 									'type' => 'popup'))),
 		      'poll_results'    => array('name' => _('poll results'),
