@@ -1,3 +1,15 @@
+2005-05-09 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b21
+
+	* Change: Merged Poll options and Custom fields into properties
+
+	* New: Made folder include/definitions, which is supposed to contain static definition.
+	       Currently added: (print) Services
+
+	* Change: Minor GUI changes.
+
+	* New: Added a classes/HTML folder, which is supposed to contain classes and method for html handling.
+	       Currently added is only a very rudimental table class :)
+
 2005-05-08 Jens Tkotz <jens@peino.de>  1.5.1-cvs-b20
 
 	* Fix: Custom fields were not set recursively (register globals issue)
